fix: 修复了maven依赖的CVE警告，遵循IDEA的建议进行了一些细节修复，包括但不限于方法替换，NPE防御，api增强，import导入